--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "node index.js"
+   },
   "keywords": [
     "expense-tracker",
     "api",
