--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.3",
     "jwks-rsa": "^3.2.0",
+    "typescript": "^5.9.3",
     "zod": "^4.2.1"
   },
   "devDependencies": {
@@ -34,7 +35,6 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "ts-node": "^10.9.2"
   }
 }
